@@ -14,16 +14,22 @@
 <div id="removable-container"><div id="removable"></div></div>
 
 <div>
-  <table>
-    <tbody id="table">
+  <table id="table">
+    <colgroup>
+      <col style="background-color:blue;" />
+    </colgroup>
+    <tbody>
       <tr>
-        <td>Data</td>
+        <td>Column 1</td>
+        <td>Column 2</td>
       </tr>
       <tr>
-        <td id="a_cell">First Row</td>
+        <td id="a_cell">Second Row</td>
+        <td></td>
       </tr>
-      <tr id="second_row">
-        <td>Second Row</td>
+      <tr id="third_row">
+        <td>Third Row</td>
+        <td></td>
       </tr>
     </tbody>
   </table>
@@ -263,16 +269,28 @@
 <table id="table_for_row_insertions"><tr id="row_1"></tr></table>
 <form method="post" action="blah">
   <select id="select_for_update" name="select_for_update">
-    <option>option 1</option>
-    <option>option 2</option>
+    <optgroup label="group">
+      <option value="A">option A</option>
+      <option value="B">option B</option>
+    </optgroup>
+    <option value="1">option 1</option>
+    <option value="2">option 2</option>
   </select>
   <select id="select_for_insert_bottom" name="select_for_insert_bottom">
-    <option>option 1</option>
-    <option>option 2</option>
+    <optgroup label="group">
+      <option value="A">option A</option>
+      <option value="B">option B</option>
+    </optgroup>
+    <option value="1">option 1</option>
+    <option value="2">option 2</option>
   </select>
   <select id="select_for_insert_top" name="select_for_insert_top">
-    <option>option 1</option>
-    <option>option 2</option>
+    <optgroup label="group">
+      <option value="C">option C</option>
+      <option value="D">option D</option>
+    </optgroup>
+    <option value="3">option 3</option>
+    <option value="4">option 4</option>
   </select>
 </form>
 <div id="wrap-container"><p id="wrap"></p></div>
