@@ -7,16 +7,22 @@
 <body>
 
 <div>
-  <table>
-    <tbody id="table">
+  <table id="table">
+    <colgroup>
+      <col style="background-color:blue;" />
+    </colgroup>
+    <tbody>
       <tr>
-        <td>Data</td>
+        <td>Column 1</td>
+        <td>Column 2</td>
       </tr>
       <tr>
-        <td id="a_cell">First Row</td>
+        <td id="a_cell">Second Row</td>
+        <td></td>
       </tr>
-      <tr id="second_row">
-        <td>Second Row</td>
+      <tr id="third_row">
+        <td>Third Row</td>
+        <td></td>
       </tr>
     </tbody>
   </table>
